<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The contents of this file are subject to the OpenMRS Public License
  ~ Version 1.0 (the "License"); you may not use this file except in
  ~ compliance with the License. You may obtain a copy of the License at
  ~ http://license.openmrs.org
  ~
  ~ Software distributed under the License is distributed on an "AS IS"
  ~ basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing rights and limitations
  ~ under the License.
  ~
  ~ Copyright (C) OpenMRS, LLC.  All Rights Reserved.
  -->

<resources>
    <string name="app_name">OpenMRS Client</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="online_mode_disable">No internet connection available,\nONLINE mode disable</string>
    <string name="no_connection_available">No network connection available</string>
    <!-- Login view -->
    <string name="login_button">Login</string>
    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="login_location_select">Choose location for this session</string>
    <string name="warning_dialog_title">Warning</string>
    <string name="warning_lost_data_dialog">You change url or username. All data will be lost. Are you sure?</string>
    <!-- Url dialog -->
    <string name="login_dialog_title">Enter URL address</string>
    <string name="login_dialog_server_url_empty_error">Server URL can not be empty.</string>
    <string name="login_dialog_login_or_password_empty">Login and password can not be empty.</string>
    <!-- Connection Timeout dialog -->
    <string name="conn_timeout_dialog_title">Connection Failed</string>
    <string name="conn_timeout_dialog_message">A network error has occurred - Connection Timeout.\nPlease try again in a few seconds.</string>
    <!-- Authentication Failed dialog -->
    <string name="auth_failed_dialog_title">Authentication Failed</string>
    <string name="auth_failed_dialog_message">Your user name or password may be incorrect. Please try again.</string>
    <!-- No internet dialog -->
    <string name="no_internet_conn_dialog_title">No internet connection</string>
    <string name="no_internet_conn_dialog_message">Your have no internet connection.\nPlease check phone or Wi-Fi connection and signal strength and try again.</string>
    <!-- Socket Exception dialog -->
    <string name="socket_exception_dialog_title">Connection Failed</string>
    <string name="socket_exception_dialog_message">A connection error has occurred .\nPlease try again in a few seconds.</string>
    <!-- Invalid URL dialog -->
    <string name="invalid_url_dialog_title">Cannot find server</string>
    <string name="invalid_url_dialog_message">Cannot find server. Please check the URL and try again.</string>
    <!-- Server unavailable dialog -->
    <string name="server_unavailable_dialog_title">Server Unavailable</string>
    <string name="server_unavailable_dialog_message">Cannot connect with server.\nPlease check the URL or internet connection and try again.</string>
    <!-- Server error dialog -->
    <string name="server_error_dialog_title">Server Error</string>
    <string name="server_error_dialog_message">Server error occurred.\nPlease check the URL or internet connection and try again.</string>
    <!-- Logout dialog -->
    <string name="logout_dialog_title">Logging out</string>
    <string name="logout_dialog_message">Are you sure you want to logout from OpenMRS client?</string>
    <string name="logout_dialog_button">Logout</string>
    <!-- Unauthorized dialog -->
    <string name="unauthorized_dialog_title">Unauthorized</string>
    <string name="unauthorized_dialog_message">Session expired. Please log in again.</string>
    <!-- Server not supported dialog -->
    <string name="server_not_supported_dialog_title">Server Not Supported</string>
    <string name="server_not_supported_dialog_message">Server could not be supported. Change URL address.</string>
    <!-- End Visit dialog -->
    <string name="end_visit_dialog_title">End Visit</string>
    <string name="end_visit_dialog_message">Are you sure you want to end this visit?</string>
    <!-- Check visit dialog -->
    <string name="check_visit_dialog_title">Checking Visits</string>
    <!-- Start visit dialog -->
    <string name="start_visit_dialog_title">Start Visit</string>
    <string name="start_visit_dialog_message">Are you sure you want to start visit for %1$s now?</string>
    <!-- Start visit dialog impossible-->
    <string name="start_visit_impossible_dialog_title">Start Visit Impossible</string>
    <string name="start_visit_impossible_dialog_message">There are already active visit. Synchronize patient or close previous visit</string>
    <!-- Progress dialog -->
    <string name="progress_dialog_message">Please wait ...</string>
    <!-- Capture vitals no visit dialog -->
    <string name="no_visit_dialog_title">Start new visit</string>
    <string name="no_visit_dialog_message">This user has no active visit. Would you like to start one now?</string>
    <string name="no_visit_dialog_button_accept">Yes</string>
    <string name="no_visit_dialog_button_cancel">Cancel</string>
    <!-- Buttons -->
    <string name="dialog_button_done">Done</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_confirm">Confirm</string>
    <!-- Settings activity -->
    <string name="settings_logs">Logs</string>
    <string name="settings_about">About</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_downloadForms">Download forms</string>
    <string name="settings_forms_downloading">Downloading forms...</string>
    <string name="settings_forms_downloaded_succesfull">Forms downloaded successful.</string>
    <string name="settings_forms_downloaded_error">Some error occurred during downloaded forms.</string>
    <string name="settings_online_mode">Online Mode</string>
    <string name="settings_online_mode_on">Online Mode is currently ON</string>
    <string name="settings_online_mode_off">Online Mode is currently OFF</string>
    <string name="settings_online_mode_not_available">Network is not available</string>
    <string name="settings_toggle_on">Online</string>
    <string name="settings_toggle_off">Offline</string>
    <string name="settings_synchronize_requests">%1$s request waiting to synchronize with server</string>
    <string name="settings_file_size">Size: %1$s kB</string>

    <!-- FindPatients activity -->
    <string name="action_find_patients">Find Patients</string>
    <string name="search_patient_hint">Patient name</string>
    <string name="search_patient_no_results">No patients in database</string>
    <string name="search_patient_no_result_for_query">No results found for query \"%1$s\"</string>
    <string name="find_patient_no_last_viewed">No last viewed patients</string>
    <string name="find_patient_tab_downloaded_label">Downloaded</string>
    <string name="find_patient_tab_last_viewed_label">Last viewed</string>
    <string name="save_patient_data_dialog">Saving patient data</string>
    <!-- Dashboard Activity -->
    <string name="dashboard_search_icon_label">Find Patients</string>
    <string name="dashboard_registry_icon_label">Registry Patient</string>
    <string name="dashboard_logged_as">logged as %1$s</string>
    <string name="dashboard_visits_icon_label">Active Visits</string>
    <string name="dashboard_vitals_icon_label">Capture Vitals</string>
    <!-- find_patients_row layout-->
    <string name="find_patients_row_checkbox_download_label">Download</string>
    <string name="find_patients_row_checkbox_available_offline_label">Available offline</string>
    <string name="find_patients_row_toast_patient_saved">Patient is now available locally</string>
    <string name="find_patients_row_toast_patient_save_error">Some error occurred. Try synchronize patient data</string>
    <!-- Patient Dashboard Activity -->
    <string name="action_synchronize_patients">Synchronizing patient</string>
    <string name="synchronize_patient_successful">Synchronize patient data successful</string>
    <string name="synchronize_patient_error">Synchronize patient data unsuccessful</string>
    <string name="action_start_visit">Start visit</string>
    <string name="action_start_visit_offline">Start visit (Offline)</string>
    <string name="start_visit_successful">Start new visit successful</string>
    <string name="start_visit_error">Start new visit unsuccessful</string>
    <string name="patient_scroll_tab_details_label">Details</string>
    <string name="patient_scroll_tab_diagnosis_label">Diagnosis</string>
    <string name="patient_scroll_tab_visits_label">Visits</string>
    <string name="patient_scroll_tab_vitals_label">Vitals</string>
    <!-- fragment_patient_details layout -->
    <string name="patient_details_gender_label">Gender</string>
    <string name="patient_details_birth_date_label">Birth date</string>
    <string name="patient_details_phone_label">Phone number</string>
    <string name="patient_address_info_label">Contact information</string>
    <string name="patient_information_label">Patient information</string>
    <string name="patient_address_label">Address</string>
    <string name="patient_city_label">City</string>
    <string name="patient_postal_label">Postal Code</string>
    <string name="patient_state_label">State</string>
    <string name="patient_country_label">Country</string>
    <!-- Find Active visit activity -->
    <string name="action_active_visits">Active Visits</string>
    <string name="search_visits_no_results">No visits in database</string>
    <!-- fragment_patient_visits layout -->
    <string name="active_visit_label">Active visit</string>
    <string name="past_visit_label">Past visit</string>
    <string name="visit_in">in %1$s</string>
    <!-- fragment_patient_vitals layout -->
    <string name="last_vitals_label">Last Vitals: </string>
    <string name="last_vitals_none_label">None</string>
    <!-- fragment_patient_diagnosis layout -->
    <string name="empty_diagnoses_list">Patient has no diagnoses yet.</string>
    <string name="diagnosis_none_label">Diagnoses are not available yet</string>
    <string name="diagnosis_note_label">Text of encounter note</string>
    <!-- Visit dashboard activity -->
    <string name="action_end_visit">End Visit</string>
    <string name="action_end_visit_offline">End Visit (Offline)</string>
    <string name="visit_dashboard_label">Encounters</string>
    <string name="list_visit_selector_show">show details</string>
    <string name="list_visit_selector_hide">hide details</string>
    <string name="list_item_encounter_no_notes">No notes for this encounter.</string>
    <string name="visit_exp_list_empty">Visit has no encounters yet.</string>
    <!-- Capture Vitals activity -->
    <string name="action_capture_vitals">Capture Vitals</string>
    <string name="failed_to_open_vitals_form">An error occurred. Invalid or corrupted form file.</string>
    <string name="active_visit_label_capture_vitals">On Visit</string>
    <!-- Form Entry Activity -->
    <string name="save_upload_button">Save and Send Vitals</string>
    <string name="forms_sent_successfully">Form has been sent successfully.</string>
    <string name="empty_visits_list">Patient has no visits yet.</string>
</resources>
