<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/loginScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/loginUsernameField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:focusable="true"
                android:hint="@string/login_username_hint"
                android:inputType="text"
                android:singleLine="true" >
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/loginPasswordField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword|text"
                android:password="true"
                android:singleLine="true" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/login_button"
                android:background="@drawable/button_simple"
                android:textColor="@color/openMRS_Dark_Purple"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar android:id="@+id/loginLoading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center"
                 android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/openmrsLogo"
        android:layout_above="@+id/loginScrollView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/openmrs_logo"/>

</RelativeLayout>
