<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.openmrs.client.activities.DashboardActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

    <LinearLayout
        android:id="@+id/modulesLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="1">

            <TableRow>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/relativeLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/findPatientButton"
                            android:layout_centerInParent="true"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:layout_alignParentTop="true"
                            android:clickable="true"
                            android:contentDescription="@string/dashboard_search_icon_label"
                            android:onClick="onFindPatientCallback"/>

                        <TextView
                            android:id="@+id/findPatientLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/findPatientButton"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            android:clickable="true"
                            android:onClick="onFindPatientCallback"
                            android:paddingTop="10dp"
                            android:text="@string/dashboard_search_icon_label"
                            android:textSize="22sp"/>
                </RelativeLayout>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/activeVisitsButton"
                            android:layout_centerInParent="true"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:layout_alignParentTop="true"
                            android:contentDescription="@string/dashboard_visits_icon_label"
                            android:onClick="onActiveVisitsCallback"
                            android:clickable="true"/>

                        <TextView
                            android:id="@+id/activeVisitsLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/activeVisitsButton"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            android:clickable="true"
                            android:paddingTop="10dp"
                            android:text="@string/dashboard_visits_icon_label"
                            android:onClick="onActiveVisitsCallback"
                            android:textSize="22sp"/>
                    </RelativeLayout>
                </FrameLayout>
            </TableRow>
            <TableRow>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/registryPatientButton"
                            android:layout_centerInParent="true"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:layout_alignParentTop="true"
                            android:onClick="onRegistryPatientCallback"
                            android:contentDescription="@string/dashboard_registry_icon_label"
                            android:clickable="true"/>

                        <TextView
                            android:id="@+id/registryLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/registryPatientButton"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            android:clickable="true"
                            android:onClick="onRegistryPatientCallback"
                            android:paddingTop="10dp"
                            android:text="@string/dashboard_registry_icon_label"
                            android:textSize="22sp"/>
                    </RelativeLayout>
                </FrameLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
